# cereal-convert

./: .gitignore  Cargo.toml  Dockerfile  config.toml  pre_build.sh
.github/workflows/: main.yml  release.yml
migrations/2021-12-19-230850_create_subscriptions/: down.sql  up.sql
migrations/2021-12-19-231524_create_books/: down.sql  up.sql
migrations/2021-12-19-231741_create_chapters/: down.sql  up.sql
migrations/2021-12-23-011045_add_move_kind_to_book/: down.sql  up.sql
migrations/2021-12-23-012551_add_foreign_keys/: down.sql  up.sql
migrations/2021-12-23-020402_change_userid_to_text/: down.sql  up.sql
migrations/2021-12-24-010411_change_book_type/: down.sql  up.sql
migrations/2021-12-26-011208_add_delivery_method/: down.sql  up.sql
migrations/2021-12-26-222310_add_send_queue_table/: down.sql  up.sql
migrations/2021-12-26-233840_chapter_type/: down.sql  up.sql
migrations/2021-12-27-030741_pushover/: down.sql  up.sql
migrations/2021-12-28-023427_change_subscription/: down.sql  up.sql
migrations/2021-12-29-222230_add_chapter_body/: down.sql  up.sql
migrations/2022-05-19-205045_add_last_chapter_to_subscription/: down.sql  up.sql
src/: aggregator.rs  calibre.rs  chapter.rs  configuration.rs  connection_pool.rs  handlers.rs  honeycomb.rs  mailgun.rs  main.rs  models.rs  pale.rs  practical_guide.rs  pushover.rs  rate_limit.rs  royalroad.rs  schema.rs  smtp.rs  storage.rs  tasks.rs  util.rs  utils.rs  wandering_inn.rs
src/calibre/: errors.rs  mod.rs
src/clients/: calibre.rs  mailgun.rs  mod.rs
src/controllers/: books.rs  mod.rs  subscriptions.rs
src/controllers/books/: errors.rs  mod.rs
src/controllers/delivery_methods/: errors.rs  filters.rs  mod.rs
src/providers/: apparatus_of_change_patreon.rs  mod.rs  pale.rs  practical_guide.rs  royalroad.rs  the_daily_grind_patreon.rs  wandering_inn.rs  wandering_inn_patreon.rs
src/royalroad/: error.rs  mod.rs
