[package]
name = "cereal"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5.8" }
feed-rs = "0.6.1"
reqwest = { version = "0.11.4", features = ["blocking"] }
regex = "1.5.4"
lazy_static = "1.4.0"
simple-error = "0.2.3"
scraper = "0.12.0"
futures = { version = "0.3.17" }
tokio = { version = "1.11.0", features = ["full"] }
lettre = { version = "0.10.0-rc.3", features = ["smtp-transport"] }
warp = "0.3"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
rand = "0.8.4"
pretty_env_logger = "0.4.0"
log = "0.4.14"
ttl_cache = "0.5.1"