[package]
name = "cereal-convert"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.11.4", features = ["multipart"] }
simple-error = "0.2.3"
scraper = "0.12.0"
futures = { version = "0.3.17" }
tokio = { version = "1.11.0", features = ["full"] }
warp = "0.3"
rusoto_core = "0.47.0"
rusoto_s3 = "0.47.0"
rand = "0.8.4"
ttl_cache = "0.5.1"
tracing = { version = "0.1.28", features = ["log"] }
tonic = { version = "0.5.2", features = ['tls-roots', 'tls'] }
tracing-subscriber = "0.2.24"
tracing-opentelemetry = "0.15.0"
opentelemetry = "0.16.0"
opentelemetry-otlp = { version = "0.9.0", features = ['tls'] }
uuid = { version = "0.8", features = ['v4', 'serde'] }
diesel = { version = "1.4.4", features = ["postgres", "uuidv07", "serde_json", "chrono"] }
dotenv = "0.15.0"
serde_json = "1.0.73"
chrono = "0.4.19"
url = "2.2.2"
mobc = "0.7.3"
addr = { version = "0.15.2", default-features = false, features= ['std', 'psl'] }
rss = "2.0.0"
itertools = "0.10.3"
